--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -3,6 +3,14 @@
     font-family: 'Open Sans', sans-serif;
 }
 /* header and nevigation styles */
+
+.header{
+    background-color: #FFF8F3;
+    background-repeat: no-repeat;
+    background-position: bottom right,left;
+    background-image: url('../images/header_bg.png'),url('../images/developer.png')
+}
+
 nav{
     display: flex;
     justify-content: space-between;
@@ -39,9 +47,57 @@ nav li{
     margin: 0 200px;
 }
 .banner-title{
+    font-weight: 700;
+    font-size: 85px;
 
 }
 .banner-sub-title{
     font-weight: 600;
     font-size: 45px;
+    margin-bottom: 20px;
+}
+.banner-description{
+    color: #757575;
+    font-size: 18px;
+    margin-bottom: 30px;
+}
+/* main section */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+/* about section style */
+.about{
+    margin-top: 130px;
+    background-color: #FFF8F3;
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+}
+.section-title{
+    font-weight: 700;
+    font-size: 35px;
+    margin-bottom: 30px;
+}
+.banner-description{
+    color: var(--Dark-03, #757575);
+    font-size: 18px;
+    margin-bottom: 30px;
+}
+table tr td{
+    padding: 3px 30px;
+    
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about .info-title{
+    font-size: 20px;
+    color: #757575;
+}
+.info-description{
+    font-weight: 700;
+    font-size: 20px;
+    color: #474747;
 }
