--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -2,7 +2,7 @@
     margin: 0;
     font-family: 'Open Sans', sans-serif;
 }
-/* header and nevigation styles */
+/* header and navigation styles */
 
 .header{
     background-color: #FFF8F3;
@@ -66,6 +66,9 @@ main{
     max-width: 1140px;
     margin: 0 auto;
 }
+section{
+    margin-top: 130px;
+}
 /* about section style */
 .about{
     margin-top: 130px;
@@ -75,18 +78,26 @@ main{
     text-align: center;
 }
 .section-title{
+    text-align: center;
+    padding-bottom: 35px;
     font-weight: 700;
     font-size: 35px;
     margin-bottom: 30px;
 }
-.banner-description{
+.section-description{
     color: var(--Dark-03, #757575);
     font-size: 18px;
     margin-bottom: 30px;
 }
-table tr td{
-    padding: 3px 30px;
-    
+.section-description2{
+    color: var(--Dark-03, #757575);
+    text-align: center;
+    font-family: Open Sans;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px; /* 166.667% */
+    margin-bottom: 60px;
 }
 .about-info-container{
     display: flex;
@@ -100,4 +111,27 @@ table tr td{
     font-weight: 700;
     font-size: 20px;
     color: #474747;
+}
+
+/* what i do styles */
+
+.what-i-do{
+    margin-top: 130px;
+}
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    padding: 30px;
+}
+.skill-title{
+    font-weight: 700;
+    font-size: 20px;
+}
+.skill-description{
+    color: #757575;
 }
