--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -82,7 +82,7 @@ section{
     padding-bottom: 35px;
     font-weight: 700;
     font-size: 35px;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 }
 .section-description{
     color: var(--Dark-03, #757575);
@@ -133,5 +133,25 @@ section{
     font-size: 20px;
 }
 .skill-description{
+    color: #757575;
+}
+/* resume style  */
+
+.resume-content{
+    display: flex;
+    gap: 24px;
+}
+
+.resume .title{
+    color: #474747;
+    font-weight: 700;
+    font-size: 25px;
+}
+.resume .sub-title{
+    color: #757575;
+    font-weight: 600;
+    font-size: 20px;
+}
+.resume .description{
     color: #757575;
 }
