--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -136,7 +136,10 @@ section{
     color: #757575;
 }
 /* resume style  */
-
+.resume-item{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
 .resume-content{
     display: flex;
     gap: 24px;
@@ -146,12 +149,19 @@ section{
     color: #474747;
     font-weight: 700;
     font-size: 25px;
+    margin-bottom: 10px;
 }
 .resume .sub-title{
     color: #757575;
     font-weight: 600;
     font-size: 20px;
+    margin-bottom: 20px;
 }
 .resume .description{
     color: #757575;
+}
+
+.resume-button{
+    margin-top: 50px;
+    text-align: center;
 }
